# Oculai

./: .gitignore  Agent-Native架构调研与初始建议.md  CLAUDE.md  README.md  工具和基建.md
.githooks/: pre-merge-commit
.github/workflows/: ci.yml
oculai-db/: .env.example  docker-compose.yml  postgresql.conf
oculai-db/schema/: 001_extensions.sql  002_enums.sql  003_tables.sql  003b_supporting_tables.sql  004_indexes.sql  005_foreign_keys.sql  006_functions.sql  008_seed.sql
oculai-db/scripts/: run_migrations.py
oculai-desktop/: electron-builder.yml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.main.json  vite.config.ts
oculai-mcp/: .env.example  pyproject.toml
oculai-mcp/src/oculai_mcp/: __init__.py  config.py  jsonl_server.py  server.py  tool_registry.py  tools_schema.json
oculai-mcp/src/oculai_mcp/db/: __init__.py  broadcasts.py  changelog.py  client.py  conflicts.py  identities.py  iterations.py  lineage.py  provenance.py  quotas.py  runs.py  search_state.py  tasks.py
oculai-mcp/src/oculai_mcp/sources/: __init__.py  acl_anthology.py  arxiv_api.py  baidu.py  baidu_qianfan.py  base.py  conference.py  csdn.py  dblp_api.py  duckduckgo.py  github_api.py  homepage.py  industry_source.py  juejin.py  openalex_api.py  pmlr.py  registry.py  semantic_scholar_api.py  zhihu.py
oculai-mcp/src/oculai_mcp/tools/: __init__.py  assessment.py  assessment_weights.py  browser.py  candidates.py  deep_dive.py  deep_search.py  errors.py  evidence.py  evidence_tier.py  outreach.py  report.py  review_orchestrator.py  site_crawler.py  sources.py  web_search.py
oculai-mcp/src/oculai_mcp/utils/: chinese_names.py  html_denoise.py
oculai-mcp/tests/: integration_test.py  test_e2e_smoke.py
scripts/: check_schema_drift.py  generate_pi_tools.py  setup.ps1  setup.sh
(+72 files in other folders)
