[project]
name = "oculai-mcp"
version = "0.1.0"
description = "Oculai Agent-Native Talent Sourcing MCP Server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Source connectors (install as needed)
playwright = ["playwright>=1.40"]
baidu = ["baidu-search", "baidu-scholar-search"]

# Development
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oculai_mcp"]
