[project]
name = "oculai-mcp"
version = "0.1.0"
description = "Oculai Multi-Agent Talent Sourcing MCP Server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pypinyin>=0.50.0",
]

[project.optional-dependencies]
# Source connectors (install as needed)
playwright = ["playwright>=1.40"]
baidu = ["baidu-search", "baidu-scholar-search"]
duckduckgo = ["duckduckgo-search>=7.0"]

# Development
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oculai_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: End-to-end tests requiring a running PostgreSQL instance",
    "unit: Unit tests that can run without external dependencies",
    "slow: Tests that take more than 5 seconds",
]
